@@ -1,3 +1,7 @@
+2015-02-25  Gedare Bloom  <gedare@rtems.org>
+
+	* libc/include/machine/time.h (_CLOCKS_PER_SEC_): redefine for RTEMS.
+
 2015-03-03  Steve Ellcey  <sellcey@imgtec.com>
 
 	* libc/machine/mips/memset.S: Add support for mips32r6/mips64r6.
